base/ceph/ceph-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph
  namespace: rook-ceph
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
  hostnames:
  - "ceph.jburt.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 7000
      # port: 8443
# # I haven't gotten this working yet.
# ---
# apiVersion: gateway.networking.k8s.io/v1alpha3
# kind: BackendTLSPolicy
# metadata:
#   name: tls-upstream
#   namespace: rook-ceph
# spec:
#   targetRefs:
#     - kind: Service
#       name: rook-ceph-mgr-dashboard
#       group: ""
#   validation:
#     hostname: ceph-dashboard
#     wellKnownCACertificates: "System"
